docs: Installationsanleitung, FAQ und Umgebungsvariablen hinzugefügt

--- a/.env.example
+++ b/.env.example
@@ -1,55 +1,45 @@
-# ===================================================================
-# aitema|RIS - Environment Configuration
-# ===================================================================
-# Copy this file to .env and adjust values for your environment
+# aitema|Rats RIS – Umgebungsvariablen
+# Kopiere diese Datei zu .env und passe die Werte an:
+#   cp .env.example .env
 
-# --- PostgreSQL ---
-POSTGRES_DB=ris
-POSTGRES_USER=ris
-POSTGRES_PASSWORD=CHANGE_ME_STRONG_PASSWORD
-POSTGRES_PORT=5432
+# ================================
+# Datenbank (PFLICHT)
+# ================================
+DB_PASSWORD=bitte_aendern_sicheres_passwort
+DATABASE_URL=postgresql://aitema:${DB_PASSWORD}@db:5432/ris
 
-# --- Redis ---
-REDIS_PASSWORD=CHANGE_ME_REDIS_PASSWORD
-REDIS_PORT=6379
+# ================================
+# Anwendung (PFLICHT)
+# ================================
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NODE_ENV=production
+PORT=3000
 
-# --- Elasticsearch ---
-ES_PORT=9200
-ES_PASSWORD=CHANGE_ME_ES_PASSWORD
+# ================================
+# OParl-Schnittstelle
+# ================================
+# URL einer externen OParl-Quelle (optional)
+OPARL_API_URL=
+# API-Schlüssel falls erforderlich
+OPARL_API_KEY=
 
-# --- MinIO (Document Storage) ---
-MINIO_ACCESS_KEY=ris_minio_admin
-MINIO_SECRET_KEY=CHANGE_ME_MINIO_SECRET
-MINIO_PORT=9000
-MINIO_CONSOLE_PORT=9001
-MINIO_BUCKET=ris-documents
+# ================================
+# Cache
+# ================================
+# Cache-Lebensdauer in Sekunden (Standard: 300 = 5 Minuten)
+CACHE_TTL_SECONDS=300
 
-# --- Keycloak (SSO / BundID) ---
-KEYCLOAK_PORT=8080
-KEYCLOAK_ADMIN=admin
-KEYCLOAK_ADMIN_PASSWORD=CHANGE_ME_KEYCLOAK_ADMIN
-KEYCLOAK_REALM=ris
-KEYCLOAK_CLIENT_ID=ris-frontend
-KEYCLOAK_HOSTNAME=auth.example.de
+# ================================
+# E-Mail (optional)
+# ================================
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=ris@ihre-gemeinde.de
 
-# --- Backend ---
-BACKEND_PORT=8000
-SECRET_KEY=CHANGE_ME_GENERATE_WITH_openssl_rand_hex_64
-ENVIRONMENT=development
-LOG_LEVEL=DEBUG
-CORS_ORIGINS=http://localhost:3000,http://localhost:8000
-
-# --- Frontend ---
-FRONTEND_PORT=3000
-
-# --- Production URLs ---
-PUBLIC_API_URL=https://api.ris.example.de
-PUBLIC_KEYCLOAK_URL=https://auth.ris.example.de
-
-# --- Sentry (optional) ---
-SENTRY_DSN=
-
-# --- DMS Bridge ---
-DMS_TYPE=none
-DMS_DVELOP_BASE_URL=
-DMS_DVELOP_API_KEY=
+# ================================
+# Suche (optional)
+# ================================
+# Volltext-Suche aktivieren (erfordert mehr RAM)
+ENABLE_FULLTEXT_SEARCH=true
